infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-service # cai nay cuc ky quan trong, no se quan ly tat ca cac thang co label app: posts-service
  template: # cai nay dinh nghia cho mot pod ma deployment se quan ly
    metadata:
      labels:
        app: client-service # day ne
    spec:
      containers:
        - name: client-service
          image: haihoanguci/client_service
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: client-service
  ports:
    - name: client-clusterip-srv
      protocol: TCP
      port: 3000
      targetPort: 3000
