infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-service
  template:
    metadata:
      labels:
        app: comments-service
    spec:
      containers:
        - name: comments-service
          image: haihoanguci/comment_service
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: comments-service
  ports:
    - name: comments-clusterip-srv
      protocol: TCP
      port: 3002
      targetPort: 3002
