infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus-service # cai nay cuc ky quan trong, no se quan ly tat ca cac thang co label app: event-bus-service
  template: # cai nay dinh nghia cho mot pod ma deployment se quan ly
    metadata:
      labels:
        app: event-bus-service # day ne
    spec:
      containers:
        - name: event-bus-service
          image: haihoanguci/event_bus_service
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP
  selector:
    app: event-bus-service
  ports:
    - name: event-bus-service
      protocol: TCP
      port: 4000
      targetPort: 4000
