infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-service # cai nay cuc ky quan trong, no se quan ly tat ca cac thang co label app: posts-service
  template: # cai nay dinh nghia cho mot pod ma deployment se quan ly
    metadata:
      labels:
        app: posts-service # day ne
    spec:
      containers:
        - name: posts-service
          image: haihoanguci/post_service
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: posts-service
  ports:
    - name: posts-clusterip-srv
      protocol: TCP
      port: 3001
      targetPort: 3001
