infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-srv
spec:
  type: NodePort
  selector:
    app: posts-service
  ports:
    - name: posts
      protocol: TCP
      port: 3001
      targetPort: 3001
