infra/k8s/querys-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: querys-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: querys-service # cai nay cuc ky quan trong, no se quan ly tat ca cac thang co label app: posts-service
  template: # cai nay dinh nghia cho mot pod ma deployment se quan ly
    metadata:
      labels:
        app: querys-service # day ne
    spec:
      containers:
        - name: querys-service
          image: haihoanguci/query_service
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: querys-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: querys-service
  ports:
    - name: querys-clusterip-srv
      protocol: TCP
      port: 3003
      targetPort: 3003
